Update features description in index.html

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <section class="section" id="features">
       <h2>Features</h2>
-      <p class="muted">Cinematische styling met simpele HTML/CSS — geen build nodig.</p>
+      <p class="muted">Cinematische styling met simpele skibidi sigma toilet — geen build nodig.</p>
 
       <div class="grid">
         <article class="card">
