--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
         <article class="card">
           <h3>Responsive</h3>
-          <p>Werkt op mobiel, tablet en desktop met nette typografie.</p>
+          <p>Werkt op iOS, tablet en desktop met nette typografie.</p>
           <div class="chip-row">
             <span class="chip">Mobile</span><span class="chip">Desktop</span><span class="chip">A11y</span>
           </div>
